--- a/public/stylesheets/nav-section.css
+++ b/public/stylesheets/nav-section.css
@@ -1,5 +1,6 @@
 .nav-right-container {
   position: sticky;
+  margin-top: 20%;
   top: 30%;
   display: flex;
   flex-direction: column;
@@ -19,6 +20,7 @@ h3 {
 }
 
 .nav-right-container a {
+  text-align: center;
   color: var(--reg-blue);
   padding: 10px 5px;
 }
